--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </form>
 
     </div>
-    <img src="/assets/images/illustration-sign-up-desktop.svg" height="500px" alt="">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSbZvT79ub0dgV8ZwYfi59PX7DkJuQWJElv3Q&usqp=CAU" height="500px" alt="">
   </main>
 
   <script src="script.js"></script>
